<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.mapbox.mapboxsdk.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/infoLayout"
        android:layout_marginBottom="8dp"
        />

    <LinearLayout
        android:id="@+id/infoLayout"
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/filtersLayout"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:padding="4dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/casesFilterButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_cases"
                android:textSize="12sp"
                app:cornerRadius="16dp"
                android:layout_marginStart="4dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="end">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/active"
                    android:textSize="16sp"
                    android:layout_margin="4dp"
                    android:textColor="@color/colorPrimary"
                    android:fontFamily="sans-serif-black" />

                <View
                    android:layout_margin="4dp"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@color/colorMapActive"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recovered"
                    android:textSize="16sp"
                    android:layout_margin="4dp"
                    android:textColor="@color/colorPrimary"
                    android:fontFamily="sans-serif-black" />

                <View
                    android:layout_margin="4dp"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@color/colorMapRecovered"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deaths"
                    android:textSize="16sp"
                    android:layout_margin="4dp"
                    android:textColor="@color/colorPrimary"
                    android:fontFamily="sans-serif-black" />

                <View
                    android:layout_margin="4dp"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@color/colorMapDeaths" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>