<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="4dp"/>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            tools:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/dataLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinner"
            app:layout_constraintVertical_bias="0"
            android:layout_marginTop="16dp">

            <LinearLayout
                android:id="@+id/cardLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    card_view:cardElevation="0dp"
                    card_view:contentPadding="8dp"
                    card_view:cardCornerRadius="8dp"
                    card_view:cardBackgroundColor="@color/colorConfirmedBG">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/confirmed"
                            android:textSize="16sp"
                            android:fontFamily="sans-serif-black"
                            android:layout_marginBottom="4dp"
                            android:textColor="@color/colorConfirmed"
                            />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp">

                            <TextView
                                android:id="@+id/confirmedCases"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                tools:text="111"
                                android:textSize="20sp"
                                android:fontFamily="sans-serif-black"
                                android:textColor="@color/colorConfirmed"
                                />

                            <TextView
                                android:id="@+id/confirmedCasesToday"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                tools:text="+111 today"
                                android:textSize="14sp"
                                android:fontFamily="sans-serif-medium"
                                android:textColor="@color/colorConfirmed"
                                android:layout_marginStart="4dp"
                                />
                        </LinearLayout>

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    card_view:cardElevation="0dp"
                    card_view:contentPadding="8dp"
                    card_view:cardCornerRadius="8dp"
                    card_view:cardBackgroundColor="@color/colorActiveBG">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/active"
                            android:textSize="16sp"
                            android:fontFamily="sans-serif-black"
                            android:layout_marginBottom="4dp"
                            android:textColor="@color/colorActive"
                            />

                        <TextView
                            android:id="@+id/activeCases"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="111"
                            android:textSize="20sp"
                            android:fontFamily="sans-serif-black"
                            android:layout_marginTop="4dp"
                            android:textColor="@color/colorActive"
                            />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    card_view:cardElevation="0dp"
                    card_view:contentPadding="8dp"
                    card_view:cardCornerRadius="8dp"
                    card_view:cardBackgroundColor="@color/colorRecoveredBG">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/recovered"
                            android:textSize="16sp"
                            android:fontFamily="sans-serif-black"
                            android:layout_marginBottom="4dp"
                            android:textColor="@color/colorRecovered"
                            />

                        <TextView
                            android:id="@+id/recoveredCases"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="111"
                            android:textSize="20sp"
                            android:fontFamily="sans-serif-black"
                            android:layout_marginTop="4dp"
                            android:textColor="@color/colorRecovered"
                            />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    card_view:cardElevation="0dp"
                    card_view:contentPadding="8dp"
                    card_view:cardCornerRadius="8dp"
                    card_view:cardBackgroundColor="@color/colorDeathBG">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/deaths"
                            android:textSize="16sp"
                            android:fontFamily="sans-serif-black"
                            android:layout_marginBottom="4dp"
                            android:textColor="@color/colorDeath"
                            />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp">
                            <TextView
                                android:id="@+id/deaths"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                tools:text="111"
                                android:textSize="20sp"
                                android:fontFamily="sans-serif-black"
                                android:textColor="@color/colorDeath"
                                />

                            <TextView
                                android:id="@+id/deathsToday"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                tools:text="+111 today"
                                android:textSize="14sp"
                                android:fontFamily="sans-serif-medium"
                                android:textColor="@color/colorDeath"
                                android:layout_marginStart="4dp"
                                />
                        </LinearLayout>

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

            <TextView
                android:id="@+id/lastUpdated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="12sp"
                android:layout_margin="8dp"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@id/cardLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            tools:visibility="gone"
            android:id="@+id/errorLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/spinner"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical"
            android:gravity="center">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error_msg"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"
                android:fontFamily="sans-serif"
                android:layout_gravity="center"
                android:layout_margin="4dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/retry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/retry"
                android:textSize="12sp"
                android:layout_margin="4dp"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>